Updated news and items needed

--- a/_data/headlines.yml
+++ b/_data/headlines.yml
@@ -8,16 +8,5 @@
 #  indented two spaces from the delimiter "- >-" to be recognized as a value.
 
 - >-
-  Vel facete mentitum inimicus te. Tantas graeco deseruisse te usu, pro nonumy graecis eu.
-  An pri munere commodo argumentum, ex doctus gloriatur persequeris pro.
-- >-
-  Te homero luptatum delicata ius, ornatus commune eu vim, ferri conclusionemque an pro.
-  Ad autem lorem vis, no recteque instructior pro. Est at agam verear inermis.
-  Et viris officiis per, sea ei vero laoreet.
-- >-
-  Vix ad suscipit invidunt, per hinc fugit accusata in, possim repudiare euripidis eu vis.
-  Graeco discere an mel, et nusquam fuisset nam. Vim et audiam indoctum maiestatis,
-  eos iudico hendrerit te. Iusto minimum te mel, no ullum menandri cum.
-- >-
-  Vis ad falli laoreet appellantur, sale placerat et vim, pri fabulas voluptua
-  luptatum ut. Ei nec meis lorem. Facete oblique nec no, liberavisse suscipiantur ei eam.
+  In light of local COVID-19 developments, food distribution and truck delivery have been CANCELLED for Tuesday,
+  January 5, 2021. There will be a produce truck delivery on Tuesday, January 12, and the next food distribution date will be Tuesday, January 19.
