--- a/_data/itemsNeeded.yml
+++ b/_data/itemsNeeded.yml
@@ -2,7 +2,8 @@
 # Please be sure that the "-" on each line is the first character in the line
 # and that no spaces precede it.
 
-- Bread
-- Diapers
-- Canned vegetables
-- Whole grain pasta
+- Coffee
+- Teabags
+- Creamer
+- sugar
+- Flour
