--- a/_data/headlines.yml
+++ b/_data/headlines.yml
@@ -5,6 +5,5 @@
 #- >-
 #  This is a headline which is very long and may need to be carried over onto a
 #  a second or third line in this file, but in any case all lines of text should be
-#  indented two spaces from the delimiter "- >-" to 
-
-
+#  indented two spaces from the delimiter "- >-" to display properly. Also, you'll
+#  want to remove the #'s for actual headlines - they prevent this example from being parsed.
