--- a/_data/headlines.yml
+++ b/_data/headlines.yml
@@ -7,4 +7,4 @@
 #  a second or third line in this file, but in any case all lines of text should be
 #  indented two spaces from the delimiter "- >-" to 
 
-
+  # The Cloverleaf Food Bank will be open on February 2 for distribution between 9:00 to noon.
