--- a/_data/links.yml
+++ b/_data/links.yml
@@ -103,7 +103,7 @@ govt-agencies:
     phone:
     description: CHIP provides low-cost health coverage to children in families that earn too much money to qualify for Medicaid.
     
-  - name: Dollar Energy FUnd
+  - name: Dollar Energy Fund
     link: https://www.dollarenergy.org/
     address:
     phone:
