--- a/_data/links.yml
+++ b/_data/links.yml
@@ -131,8 +131,7 @@ govt-agencies:
     link: https://www.benefits.gov/benefit/613
     address:
     phone:
-    description: The Temporary Assistance for Needy Families (TANF) program provides grant funds to states and
-    territories to provide families with financial assistance and related support services.    
+    description: The Temporary Assistance for Needy Families (TANF) program provides grant funds to states and territories to provide families with financial assistance and related support services.    
     
 
 
