--- a/_data/headlines.yml
+++ b/_data/headlines.yml
@@ -10,4 +10,7 @@
 - >-
   The Cloverleaf Food Bank would like to thank Berkshire Hathaway Home Services for conducting a food drive in March.  We received wonderful donations to distribute to our families.
  ->- 
-   In March we served 172 families and 668 individuals.  
+  We have about 350 familes registered at the food bank.  In April we served 158 families and 631 individuals.  
+ ->-
+  We would like to thank the teachers, students and their families from the Tillotson School for collecting food to donate to the food bank.   Their contributions are greatly appreciated!!
+  
