--- a/_data/calendar.yml
+++ b/_data/calendar.yml
@@ -23,87 +23,87 @@
 #     - Regular truck delivery
 #
 # Please put items below this line:
-
-- date: January 12
-  events:
-    - Regular truck delivery
-
-- date: January 19
-  events:
-    - Food distribution
-    - Produce truck delivery
-
-- date: February 2
-  events:
-    - Food distribution
-    - Produce truck delivery
-
-- date: February 9
-  events:
-    - Regular truck delivery
-
-- date: February 23
-  events:
-    - Food distribution
-    - Produce truck delivery
-
-- date: March 2
-  events:
-    - Food distribution
-    - Produce truck delivery
-
-- date: March 9
-  events:
-    - Regular truck delivery
-
-- date: March 16
-  events:
-    - Food distribution
-    - Produce truck delivery
-
-- date: March 30
-  events:
-    - Food distribution
-    - Produce truck delivery
-
-- date: April 6
-  events:
-    - Regular truck delivery
-
-- date: April 13
-  events:
-    - Food distribution
-    - Produce truck delivery
-
-- date: April 27
-  events:
-    - Food distribution
-    - Produce truck delivery
-
 - date: May 4
   events:
     - Food distribution
-    - Produce truck delivery
-
-- date: May 11
-  events:
-    - Regular truck delivery
-
+    - Produce truck 
+    
 - date: May 25
   events:
     - Food distribution
-    - Produce truck delivery
-
-- date: June 1
-  events:
-    - Regular truck delivery
+    - Produce truck 
 
 - date: June 8
   events:
     - Food distribution
-    - Produce truck delivery
+    - Produce truck 
 
 - date: June 22
   events:
     - Food distribution
-    - Produce truck delivery
+    - Produce truck 
+    
+- date:  July 6
+  events:
+    - Food distribution
+    - Produce truck
+    
+- date:  July 20
+  events:  
+    - Food distribution
+    - Produce truck
+    
+- date:  August 3
+  events:  
+    - Food distribution
+    - Produce truck
+    
+- date: August 17
+  events:  
+    - Food distribution
+    - Produce truck
+
+- date: August 31
+  events:  
+    - Food distribution
+    - Produce truck  
+
+- date: September 14
+  events:  
+    - Food distribution
+    - Produce truck
+    
+- date: September 28
+  events:  
+    - Food distribution
+    - Produce truck
+    
+- date: October 12
+  events:  
+    - Food distribution
+    - Produce truck
+    
+- date: October 26
+  events:  
+    - Food distribution
+    - Produce truck
+    
+- date: November 9
+  events:  
+    - Food distribution
+    - Produce truck
+    
+- date: November 23
+  events:  
+    - Food distribution
+    - Produce truck
+    
+- date: December 7
+  events:  
+    - Food distribution
+    - Produce truck
+    
+- date: December 21
+  events:  
+    - Food distribution
+    - Produce truck
